# InternalTransition

./: CMakeLists.txt  README.md
.github/workflows/: test_pull_requests.yml
inputs/: in.epjson  in.idf
src/: file_format.cpp  file_format.h  main.cpp  transition.cpp  transition.h
tst/: test.cpp
